--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -10,6 +10,12 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      - name: Extract branch information
+        run: |
+            branch_name=${GITHUB_REF#refs/heads/}
+            ticket_number=${branch_name%%-*}
+            branch_type=${branch_name#*-}
+            branch_type=${branch_type%%-*}
 
       - name: Increment version
         id: version
@@ -47,4 +53,5 @@ jobs:
       - name: Publish release
         if: startsWith(github.ref, 'refs/heads/feature') || startsWith(github.ref, 'refs/heads/hotfix')
         run: |
+          git push --tags
 
