--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -12,6 +12,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Extract branch information
         run: |
+            git_tag=${git tag -l}
             branch_name=${GITHUB_REF#refs/heads/}
             ticket_number=${branch_name%%-*}
             branch_type=${branch_name#*-}
