--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -21,10 +21,11 @@ jobs:
         id: version
         run: |
           current_version=$(git describe --tags --match "$TAG_PREFIX*" --abbrev=0)
-          echo "$current_version"
+          echo "${current_version}"
           major=$(echo "$current_version" | cut -d '.' -f 1)
           minor=$(echo "$current_version" | cut -d '.' -f 2)
           patch=$(echo "$current_version" | cut -d '.' -f 3)
+          echo "${branch_type}"
           case $branch_type in
             "feature")
               major=$((major+1))
