--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -20,11 +20,11 @@ jobs:
       - name: Increment version
         id: version
         run: |
-          current_version=$(git describe --tags --match "$TAG_PREFIX*" --abbrev=0)
+          current_version=$(git describe --tags --abbrev=0)
           echo "check ici "
-          major=$(echo "$current_version" | cut -d '.' -f 1)
-          minor=$(echo "$current_version" | cut -d '.' -f 2)
-          patch=$(echo "$current_version" | cut -d '.' -f 3)
+          major=$(echo "$current_version" | \d )
+          minor=$(echo "$current_version" | \d.\d )
+          patch=$(echo "$current_version" | \d\d\d)
           echo "${branch_type}"
           case $branch_type in
             "feature")
