--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -12,6 +12,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Extract branch information
         run: |
+          current_version=$(git describe --tags --abbrev=0)
+          echo "${current_version}"
           branch_name=${GITHUB_REF#refs/heads/}
           echo "${branch_name}"
           branch_type=$(echo "$branch_name" | grep -Eo '(feature|hotfix|bugfix)')
