--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -22,9 +22,9 @@ jobs:
         run: |
           current_version=$(git for-each-ref refs/tags --sort=-taggerdate --format='%(refname:short)' --count=1)
           echo "check ici "
-          major=$(echo "$current_version" | \d )
-          minor=$(echo "$current_version" | \d.\d )
-          patch=$(echo "$current_version" | \d\d\d)
+          major=$(echo "$current_version" | cut -d '.' -f 1)
+          minor=$(echo "$current_version" | cut -d '.' -f 2)
+          patch=$(echo "$current_version" | cut -d '.' -f 3)
           echo "${branch_type}"
           case $branch_type in
             "feature")
