--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -25,7 +25,10 @@ jobs:
           major=$(echo "$current_version" | cut -d '.' -f 1)
           minor=$(echo "$current_version" | cut -d '.' -f 2)
           patch=$(echo "$current_version" | cut -d '.' -f 3)
-          echo "${{ env.branch_type }}"
+          echo "major = ${major}"
+          echo "minor = ${minor}"
+          echo "patch = ${patch}"
+          echo "branch type variable before switch case => ${{ env.branch_type }}"
           case ${{ env.branch_type }} in
             "feature")
               major=$((major+1))
