--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -23,11 +23,11 @@ jobs:
           updatetag=$(git fetch --tags --all)
           upttage=$(git describe --tags $(git rev-list --tags --max-count=1))
           echo "${upttage}"
-          current_version=$(git for-each-ref refs/tags --sort=-taggerdate --format='%(refname:short)' --count=1)"
-          echo " current version= ${current_version}"
-          major=$(echo "$current_version" | cut -d '.' -f 1)
-          minor=$(echo "$current_version" | cut -d '.' -f 2)
-          patch=$(echo "$current_version" | cut -d '.' -f 3)
+          
+          echo " current version= ${upttage}"
+          major=$(echo "$upttage" | cut -d '.' -f 1)
+          minor=$(echo "$upttage" | cut -d '.' -f 2)
+          patch=$(echo "$upttage" | cut -d '.' -f 3)
           echo "major = ${major}"
           echo "minor = ${minor}"
           echo "patch = ${patch}"
