--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -48,8 +48,8 @@ jobs:
               exit 1
               ;;
           esac
-          new_version="version${major}.${minor}.${patch}"
-          git tag "$TAG_PREFIX$new_version"
+          new_version="version ${major}.${minor}.${patch}"
+          git tag -a ${TAG_PREFIX}${major}.${minor}.${patch} -m $new_version"
+          git push origin ${TAG_PREFIX}${major}.${minor}.${patch}
           echo "${new_version}"
-          git describe
 
