--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -49,7 +49,7 @@ jobs:
               ;;
           esac
           new_version="version${major}.${minor}.${patch}"
-          git tag -a ${TAG_PREFIX}${major}.${minor}.${patch} -m $new_version"
+          git tag -a ${TAG_PREFIX}${major}.${minor}.${patch} -m "$new_version"
           git push origin ${TAG_PREFIX}${major}.${minor}.${patch}
           echo "${new_version}"
 
