--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,12 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '14'
+    - name: Get latest tag name
+      run: echo ::set-output name=tag::$(git describe --tags $(git rev-list --tags --max-count=1))
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
