--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,12 +9,9 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'
     - name: Get latest tag name
-      run: echo ::set-output name=tag::$(git describe --tags $(git rev-list --tags --max-count=1))
+      id: get_latest_tag_name
+      run: echo "::set-output name=tag::$(curl -s https://api.github.com/repos/${{ github.repository }}/git/refs/tags | jq -r '.[].ref' | grep -Eo "[^/]+$" | sort -V | tail -1)"
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
