--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ jobs:
       uses: actions/checkout@v2
     - name: Get latest tag name
       id: get_latest_tag_name
-      run: echo "::set-output name=tag::$(curl -s https://api.github.com/repos/${{ github.repository }}/git/refs/tags | jq -r '.[].ref' | grep -Eo "[^/]+$" | sort -V | tail -1)"
+      run: echo "::set-output name=tag::$(git tag | sort -V | tail -1)"
     - name: Debug latest tag name
       run: echo "Latest tag name:${{ steps.get_latest_tag_name.outputs.tag }}"
     - name: Create Release
@@ -27,3 +27,4 @@ jobs:
         prerelease: false
     - name: Debug create release output
       run: echo "${{ steps.create_release.outputs }}"
+
